# oomph-lib-micromagnetics

./: .gitignore  Makefile.am  README.md  algebra-for-parameters.m  array_interpolator.h  bdf2_with_predictor.h  boundary_element_handler.cc  boundary_element_handler.h  cayley_integrators.cc  cayley_integrators.h  energy_functions.cc  energy_functions.h  general_inner_iteration_precondtioner.h  generate_git_version_header.sh  generic_poisson_problem.cc  generic_poisson_problem.h  geometric_integrators.cc  geometric_integrators.h  hmatrix.h  hybrid_micromagnetics_problem.h  implicit_llg_exchange_problem.h  implicit_llg_problem.h  interpolator.h  jacobian-eigs.py  jacobian_algebra.m  llg_cli.h  llg_factories.cc  llg_factories.h  llg_preconditioners.h  llg_problem.cc  llg_problem.h  mag_vector.py  magnetic_materials.cc  magnetic_materials.h  magnetic_parameters.cc  magnetic_parameters.h  magnetics_helpers.cc  magnetics_helpers.h  magnetostatic_field_flux_element.h  magnetostatics_calculator.cc  (+63 more)
combined_hybrid/: combined_hybrid_driver.cc
combined_hybrid/3d_combined_hybrid/: 3d_combined_hybrid_driver.cc
control_scripts/: intermag.py  intermag_rk4.py  mesh_construction.py  nmag-cubeoid.sh  parameter-sweep.py  parse.py  tcut.sh  test.py  trace-headers.sh  view-latest.py  view-results.py
control_scripts/driver/: Makefile.am  driver.cc
control_scripts/implicit_llg_driver/: Makefile.am  implicit_llg_driver.cc
control_scripts/llg_driver/: Makefile.am  llg_driver.cc
control_scripts/ode_driver/: Makefile.am  ode_driver.cc  plots.py
control_scripts/semi_implicit_mm_driver/: Makefile.am  semi_implicit_mm_driver.cc
control_scripts/unsteady_heat_driver/: Makefile.am  unsteady_heat_driver.cc
demag/: Makefile.am  demag_driver.cc  makerun.sh  micromagnetics_element.h  one_d_micromag_driver.cc  plot-gif.sh  plot.sh
discontinuity_tests/: Makefile.am  discontinuity_tests_driver.cc  discontinuity_tests_element.cc
discontiuity_tests/: discontiuity_tests_driver.cc
etc/: analyse_schur.py  check_nodal_quadrature.py  convert_to_c++98.sh  generate-parameter-sweep-arguments.py  hms_vec.py  intermag_time_ratios.py  intermag_time_ratios2.py  node2csv.sh  py_validate_skele.py  useful_snippets.cc  variable_quadrature_c++11.h  wave_exact_solution_plots.py
etc/generate_quadrature_rules/: generate_quadrature_rules_driver.cc  quadrule.h
etc/oomphpy/: matrices.py  micromagnetics.py  tests.py  utils.py
etc/parameter_sets/: README  fail_test  self_test
etc/sphere_mesh_generation/: Makefile.am  generate_tetgen_sphere_input.cc
experiments/circle_bem/: Makefile.am  circle.fig  circle_bem.cc  go.sh  poly2corner.sh
experiments/implicit_llg_multigrid/: Makefile.am  control_loop.sh  dump_jacobians_loop.sh  dump_sphere_jacobians_loop.sh  go.sh  multigrid_experiments.cc  multigrid_loop.sh  parallel_multigrid_loop.sh  pmg_loop.sh  sphere_gen.sh  square.poly
experiments/midpoint_llg/: Makefile.am  go.py  midpoint_llg.cc
experiments/quad_rectangle/: Makefile.am  loop.sh  semi_implicit_driver.cc
experiments/single_element_bem/: Makefile.am  single_element_bem.cc  single_element_mesh.h
generate_gauss_rules/: Makefile.am  generate_gauss_rules_driver.cc
generate_quadrature_rules/: generate_quadrature_rules_driver.cc  quadrule.cc
generic_poisson_test/: Makefile.am  generic_poisson_test.cc
hybrid_boundary_element/: Makefile.am  compare_boundary_m.sh  hybrid_boundary_element_driver.cc  quadrature_accuracy_test.sh  variable_quadrature.cc  variable_quadrature.h  variable_quadrature_c++11.h
integration_tests/: Makefile.am  integration_tests_driver.cc
integration_tests/find_corresponding_knot_check/: Makefile.am  find_corresponding_knot_check_driver.cc
integration_tests/quadrature_accuracy_check/: Exact_integral_evaluation.nb  Makefile.am  quadrature_accuracy_check_driver.cc
integration_tests/rigorous_degree_test/: Makefile.am  rigorous_degree_test_driver.cc
integration_tests/triangular_integration/: Makefile.am
meshes/: circle.poly  cubeoid.poly  mumag4.poly  square.poly
mumag4/: Makefile.am  mumag4_driver.cc
one_d_boundaries_multi_mesh/: Makefile.am  one_d_boundaries_multi_mesh_driver.cc
one_d_cryst_anis/: Makefile.am
one_d_demag_testing/: Makefile.am  algebra-parameters-demag1.m  algebra-parameters-demag3.m  algebra-parameters-demag5.m  algebra-parameters-demag6.m  algebra-parameters-demag7.m  baseparameters.cc  one_d_demag_testing_driver  one_d_demag_testing_driver.cc  parameters-demag1.cc  parameters-demag2.cc  parameters-demag3.cc  parameters-demag4.cc  parameters-demag5.cc  parameters-demag6.cc  parameters-demag7.cc  parameters-demag8.cc  parameters-demag_constM.cc  parameters.cc  parameters2.cc  parameters3.cc  parameters4.cc  parameters5.cc  parameters6.cc
one_d_exchange_testing/: Makefile.am  algebra-for-parameters.m  algebra-parameters1.m  one_d_exchange_testing_driver.cc  parameters-exchange1.cc  parameters-exchange2.cc  parameters-exchange3.cc  parameters-exchange4.cc  parameters-exchange5.cc  parameters-exchange6.cc  parameters-exchange7.cc  parameters1.cc
one_d_micromag/: Makefile.am  one_d_micromag_driver.cc
patches/: all_changes.diff  autogen.sh.diff  const-ify.diff  frontal-h.diff  generic_makefile.patch  multiple_integrations.diff
preconditioner_test/: Makefile.am  preconditioner_test_driver.cc
quadrature_generation/: Makefile.am  generate_quadrature.cc
self_test/: Makefile.am  poisson_test_problem.h
singular_quadrature/: Makefile.am  singular_quadrature_test_driver.cc
sphere_mesh/: Makefile.am  check_jacobian_properties.m  generate_tetgen_sphere_input.cc  go.sh  mesh_and_calculate.sh  sphere_driver.cc  sphere_mesh.h
sum_matrix_operation_tests/: Makefile.am  sum_matrix_operation_tests.cc
test_collection/: poisson_test_problem.h  run_tests.sh
three_d_micromag/: Makefile.am  parameters-threed2.cc  three_d_micromag_driver.cc
triangular_elements/: Makefile.am
two_d_micromag/: Makefile.am  parameters-twod1.cc  parameters-twod3.cc  two_d_micromag_driver.cc
vector_helper_tests/: Makefile.am  vector_helper_tests_driver.cc
(+203 files in other folders)
